welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: too many arguments for method isFacingTrail: ()Boolean
   	if(isFacingTrail(c)==true){
                        ^SlugSnail:21: error: not found: value c
if(getCouleurSol()!=c){
                    ^